edited words and updated production

--- a/src/about/index.jade
+++ b/src/about/index.jade
@@ -18,7 +18,7 @@ block content
 
     .large-8.columns
       p.subtext.
-        I’m Ningxia Zhang (张宁夏), a New York-based, China-born product designer. With mixed backgrounds in Computer Science, Software Engineering and Human-Computer Interaction, I bring a holistic perspective to design, and can take a product idea from concept to life. When I'm not designing, I spend my time making art, visiting art galleries and museums, going to live performances and reading.
+        I’m Ningxia Zhang (张宁夏), a New York-based, China-born product designer. With mixed backgrounds in Computer Science, Software Engineering and Human-Computer Interaction, I bring a holistic perspective to design and can take a product idea from concept to life. When I'm not designing, I spend my time making art, visiting art galleries and museums, going to live performances and reading.
 
   +cover('../images/portrait.jpg')(class='about-portrait content--fadeIn')
 
@@ -30,10 +30,10 @@ block content
           I was born and raised in #[a(href='https://en.wikipedia.org/wiki/Yichang', target='_blank') Yichang], a small city in central China. As a child, I loved drawing and creating little art pieces. Later in middle school, I gave up my creative pursuits as I was found talented in math and science, and everyone told me that art was for people not smart enough to do math.
 
         p.
-          So I ended up as a Software Engineering major at #[a(href='https://en.wikipedia.org/wiki/Fudan_University', target='_blank') Fudan], one of the best universities in China. I enjoyed understanding abstract concepts and solving complex problems, but felt something was missing. I missed the joy of creating, and I realized even though technology is powerful, the art of making it easy to adopt is what eventually makes it beneficial to us. The #[a(href='https://news.stanford.edu/2005/06/14/jobs-061505/', target='_blank') dots] started to connect.
+          So I ended up as a Software Engineering major at #[a(href='https://en.wikipedia.org/wiki/Fudan_University', target='_blank') Fudan], one of the best universities in China. I enjoyed understanding abstract concepts and solving complex problems, but felt something was missing. I missed the joy of creating, and realized that even though technology is powerful, the art of making it easy to adopt is what eventually makes it beneficial to us. The #[a(href='https://news.stanford.edu/2005/06/14/jobs-061505/', target='_blank') dots] started to connect.
 
         p.
-          This led me to Stanford for a master degree in Human-Computer Interaction, an area in Computer Science that intersects with design, social science, etc. I took classes ranging from machine learning to designing for theater experiences, and got fully immersed in the creative and entrepreneurial environment. It was quite challenging, especially for an international student, but the overall experience was transformative and empowering.
+          This led me to Stanford for a master degree in Human-Computer Interaction, an area in Computer Science that intersects with design, social science, etc. I took classes ranging from machine learning to designing for theater experiences, and fully immersed myself in the creative and entrepreneurial environment. It was quite challenging, especially for an international student, but the overall experience was transformative and empowering.
 
         p.
           Upon graduation, I joined an early-stage #[a(href='/design/apropose/', target='_blank') startup] founded by Stanford HCI researchers as the Director of User Experience. Apart from doing everything design-related as the only designer, I was also closely involved in product strategy, business develpome and web development.
@@ -69,7 +69,7 @@ block content
       .large-8.columns
         h3 About the Site
         p.
-          This site is designed and hand-coded by me, using a #[a(href='http://yeoman.io/', target='_blank') Yeoman] generator for static sites named #[a(href='https://github.com/larsonjj/generator-yeogurt', target='_blank') Yeogurt], with the power of #[a(href='http://jade-lang.com/', target='_blank') Jade], #[a(href='http://sass-lang.com/', target='_blank') Sass] and #[a(href='http://foundation.zurb.com/', target='_blank') Foundation]. The code can be found on #[a(href='https://github.com/ningxiaz/new-ningxia-site', target='_blank') Github]. It's constantly being updated, see the #[a(href='https://github.com/ningxiaz/new-ningxia-site/blob/master/CHANGELOG.md', target='_blank') changelog].
+          This site is designed and coded by me, using a #[a(href='http://yeoman.io/', target='_blank') Yeoman] generator for static sites named #[a(href='https://github.com/larsonjj/generator-yeogurt', target='_blank') Yeogurt], with the power of #[a(href='http://jade-lang.com/', target='_blank') Jade], #[a(href='http://sass-lang.com/', target='_blank') Sass] and #[a(href='http://foundation.zurb.com/', target='_blank') Foundation]. The code can be found on #[a(href='https://github.com/ningxiaz/new-ningxia-site', target='_blank') Github]. It's constantly being updated, see the #[a(href='https://github.com/ningxiaz/new-ningxia-site/blob/master/CHANGELOG.md', target='_blank') changelog].
 
   +logo('../')(class='logo')
   +menu('about')(class='menu')
