--- a/src/design/brand/index.jade
+++ b/src/design/brand/index.jade
@@ -21,7 +21,7 @@ block project-content
         p.
           It’s hard for brand advertisers to measure the effectiveness of their brand advertisements on Facebook. The plain polling formats we offered in News Feed were not effective in capturing emotional response or subtle attitude changes.
         p.
-          To solve this, we set out to develop novel Brand Equity polling formats that are more effective in capturing brand sentiments and tested with our pilot advertisers on their upcoming campaigns. In this prototype, we attempted to measure how connected consumers felt about the Uber brand.
+          To solve this, we set out to develop novel brand equity polling formats that are more effective in capturing brand sentiments and tested with our pilot advertisers on their upcoming campaigns. In this prototype, we attempted to measure how connected consumers felt about the Uber brand.
         p.
           From the data analysis after the campaign, we learned that the new formats agreed with comparable standard formats directionally and appeared to produce greater signal.
 
@@ -45,7 +45,7 @@ block project-content
           We randomize target audience into test and control groups; we only serve ads to the test group; we later serve polls in News Feed asking both groups questions regarding the brand; we then compare the rates of favorable responses between test and control and see if there’s a lift.
 
           ### Problem
-          Standard brand polling methods do not have the ability to measure mid-funnel and bottom funnel brand metrics, such as Message Association, Purchase Intent, in a sensitive way.
+          Standard brand polling methods do not have the ability to measure mid-funnel or bottom-funnel brand metrics, such as Message Association, Purchase Intent, in a sensitive way.
 
         .project-gallery
           a.fluidbox(href='../../images/design/brand-1.jpg')
@@ -63,11 +63,11 @@ block project-content
           ## Design
 
           ### Explore
-          Suggested by our UX Researcher with a PhD in social psychology, we planned to use a common method to measure connection in social science research. In this method, participant is asked to select the visual representation of two circles that most accurately describes the connection they have to a certain concept.
+          Suggested by our UX Researcher with a PhD in social psychology, we planned to use a common method to measure connection in social science research. In this method, participants are asked to select the visual representation of two circles that most accurately describes the connection they have to a certain concept.
 
           See academic paper: [Ingroup Identification as the Inclusion of Ingroup in the Self - Linda R. Tropp, Stephen C. Wright, 2001](http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.621.219&rep=rep1&type=pdf).
 
-          I then explored some UI concepts and used them to help answer some open questions, such as whether we would want to measure connection to competitors or not.
+          I then explored some UI concepts and used them to help answer some open questions, such as whether we would want to measure connection to competitors as well.
 
         .project-gallery
           a.fluidbox(href='../../images/design/brand-2.png')
@@ -101,7 +101,7 @@ block project-content
         :markdown
           Specifically, we need to make a decision between drag vs. slide interaction.
 
-          We decided to use slider because:
+          We decided to use the slider because:
 
           * The slider more closely approximates the established metric
           * The slider communicates more clearly the affordance and the range of options
@@ -118,7 +118,7 @@ block project-content
           ## Launch
           I collaborated with PMM and engineers to finalize campaign schedule and ship timeline and made sure design QA would happen before Eng testing.
 
-          We successfully launched this poll with Uber Brand campaign in 2017Q4.
+          We successfully launched this poll with Uber's brand campaign in 2017Q4.
 
           ## Price Premium Format
 
@@ -136,7 +136,7 @@ block project-content
           * The CTR from the feed is significantly lower than standard formats. This needs to be fixed before we can be more conclusive with the potential of the new formats.
 
           ## Learnings
-          * Have learned to drive project forward with XFN partners without much help from PM
+          * Have learned to drive project forward with cross-functional partners without much help from PM
           * Have learned to involve Eng early and manage the risk of delay
           * Have learned to work with remote partners
           * Have learned to make design decisions with feedback from diverse perspectives
