--- a/src/design/brandreport/index.jade
+++ b/src/design/brandreport/index.jade
@@ -29,7 +29,7 @@ block project-content
           In parallel, I worked with another designer in developing the lift reporting framework that is extensible and focuses on actionability.
 
         p.
-          The report was built and shipped together with the self-serve Brand Lift solution. The project had contributed to our top-line metric: measured spend (I did not get to see the detail analysis).
+          The report was built and shipped together with the self-serve Brand Lift solution. The project had contributed to our top-line metric: measured spend (I did not get to see the detailed analysis).
 
         :markdown
           ## Context
@@ -77,7 +77,7 @@ block project-content
 
 
           ### Participatory Design
-          To further answer the questions on what report narrative makes sense and what helps ease understanding and promotes actionability, we conducted research with 10 advertisers / advertising agencies in London using the participatory design method.
+          To further answer the questions of what report narrative makes sense and what helps ease understanding and promotes actionability, we conducted research with 10 advertisers / advertising agencies in London using the participatory design method.
 
           In the research session, participants were given cards each with a description of information and a visual example. They were asked to pick or discard cards based on whether they found the information and how it’s presented helpful. Eventually they were asked to arrange the chosen cards to assemble their ideal report. During the whole session, they were encouraged to talk loud of their rationale.
 
@@ -89,7 +89,7 @@ block project-content
             label.image-caption Examples of the cards
 
         :markdown
-          Here’s what we learned:
+          Here’s what we've learned:
 
           * The ideal UI narrative:
             * Recap of the test setup
@@ -118,7 +118,7 @@ block project-content
             label.image-caption At the research session
 
         :markdown
-          Here’s what we learned:
+          Here’s what we've learned:
 
           * Need Answer Page to contain all of the data necessary in determining the overall success of the campaign
           * Need the reports to communicate terms and concepts in their language
@@ -127,9 +127,11 @@ block project-content
           * Need Facebook to take a clear stance on measurement definitions
 
           ### Iterate & Ship
-          A lot of the problems uncovered in the research were about content. I worked in close loop with Content Strategist to revise content, including metric definitions, metric explanations, natural language statements and test terminology. There was a lot of complexity of explaining the confidence level and how we should advise advertisers in different cases, e.g. low confidence, high confidence etc.
+          A lot of the problems uncovered in the research were about content. I worked in close loop with Content Strategist to revise content, including metric definitions, metric explanations, natural language statements and test terminology. There was a lot of complexity in explaining the confidence level and how we advise advertisers in different cases, e.g. low confidence, high confidence etc.
 
           After content was finalized, I spec’ed out the design, worked with engineers on clarifying requirements, covering edge cases etc.
+
+          Here are the design specs for localization.
 
         .project-gallery
           a.fluidbox(href='../../images/design/brandreport-6.png')
@@ -137,7 +139,7 @@ block project-content
             label.image-caption Localization design for long string and right-to-left languages
 
         :markdown
-          The project was shipped together with the self-serve Brand Lift solution. The project had contributed to our top-line metric: measured spend (I did not get to see the detail analysis).
+          The project was launched together with the self-serve Brand Lift solution. It had contributed to our top-line metric: measured spend, but I did not get to see the detailed analysis.
 
           ## Learnings
 
