--- a/src/design/index.jade
+++ b/src/design/index.jade
@@ -14,7 +14,7 @@ block title
 
 block description
   p.subtext.
-    I aspire to design and build experiences that are useful, pleasant and meaningful. To me, good design solutions come from deep empathy of the users, good understanding of the problem, constraints and business objectives, iterations closely with user feedback, and intentional decisions with solid reasoning.
+    I aspire to design and build experiences that are useful, pleasant and meaningful. To me, good design solutions come from deep empathy of the users, comprehensive understanding of the problem including constraints and business objectives, fast iterations with feedback, and intentional decisions with solid reasoning.
 
 block category-content
   .category-content.clearfix
